--- a/TestingEz/src/main/resources/templates/my-tests.html
+++ b/TestingEz/src/main/resources/templates/my-tests.html
@@ -7,11 +7,11 @@
     <div th:replace="~{fragments/headers :: header}"></div>
 
     <main class="container d-flex flex-column justify-content-center flex-grow-1">
-        <h3>My Tests</h3>
+        <h3 th:text="#{myTests}"></h3>
         <div class="container shadow rounded border border-2 p-5">
             <span class="fs-4"
+                  th:text="#{youDontHaveAnyTestsSoFar}"
                   th:if="${paginatedTests.isEmpty()}">
-                You don't have any created tests so far.
             </span>
             <div class="row align-items-center border border-2 shadow rounded p-2 mb-2"
                  th:each="test, iStat : ${paginatedTests}">
@@ -19,25 +19,25 @@
                     <span th:text="${iStat.index + 1} + '.' + ${test.name}"></span>
                 </div>
                 <div class="col-sm-12 col-md-3">
-                    <span th:text="'Current status: ' + ${test.status}"></span>
+                    <span th:text="#{status} + ' ' + ${test.status}"></span>
                 </div>
                 <div class="col-sm-12 col-md-3">
-                    <span th:text="'Last updated: ' + ${test.dateUpdated}"></span>
+                    <span th:text="#{lastUpdated} + ' ' + ${test.dateUpdated}"></span>
                 </div>
                 <div class="col-sm-12 col-md-3 text-end">
-                    <a class="btn btn-light px-3 border border-2 shadow rounded"
+                    <a class="btn btn-dark px-3 border border-2 rounded"
+                       th:text="#{details}"
                        th:href="@{/test/details/{id}(id=${test.id})}">
-                        details
                     </a>
                 </div>
             </div>
             <div class="d-flex justify-content-center gap-1">
-                <a class="btn btn-light text-center px-3 py-1 shadow rounded border border-2"
+                <a class="btn btn-dark text-center px-3 py-1 shadow rounded border border-2"
                    th:href="@{/user/my-tests(page=${paginatedTests.number - 1}, size=${paginatedTests.size})}"
                    th:if="${paginatedTests.hasPrevious()}">
                     <img src="/images/left-arrow.png" alt="<<" style="width: 25px; height: auto;">
                 </a>
-                <a class="btn btn-light text-center px-3 py-1 shadow rounded border border-2"
+                <a class="btn btn-dark text-center px-3 py-1 shadow rounded border border-2"
                    th:href="@{/user/my-tests(page=${paginatedTests.number + 1}, size=${paginatedTests.size})}"
                    th:if="${paginatedTests.hasNext()}">
                     <img src="/images/right-arrow.png" alt=">>" style="width: 25px; height: auto;">
@@ -47,7 +47,10 @@
     </main>
     <div th:replace="~{fragments/footers :: footer}"></div>
 </div>
-
+<script
+        type="module"
+        src="https://cdn.jsdelivr.net/npm/@bufferhead/nightowl@0.0.14/dist/nightowl.js"
+></script>
 <div th:replace="~{fragments/scripts :: scripts}"></div>
 </body>
 </html>
