--- a/TestingEz/src/main/resources/templates/test-create.html
+++ b/TestingEz/src/main/resources/templates/test-create.html
@@ -6,7 +6,7 @@
     <div th:replace="~{fragments/headers :: header}"></div>
 
     <main class="d-flex align-items-center flex-grow-1">
-        <div class="container bg-secondary border border-2 border-black rounded shadow text-white fs-4 p-3">
+        <div class="container bg-light border border-2 rounded shadow fs-4 p-3">
             <form
                     action="#"
                     class="needs-validation"
@@ -14,15 +14,15 @@
                     novalidate
                     th:action="@{/test/create}"
                     th:object="${testCreateData}">
-                <h1 class="text-center" th:text="#{createTest}">Create Test</h1>
+                <h1 class="text-center" th:text="#{createTest}"></h1>
                 <div class="row row-cols-1 row-cols-md-2 mb-2">
                     <div class="col">
-                        <label for="name" class="form-label" th:text="#{testName}">Test name:</label>
+                        <label for="name" class="form-label" th:text="#{testName}"></label>
                     </div>
                     <div class="col">
                         <div class="input-group has-validation">
                             <input
-                                    class="form-control border border-black shadow fs-5"
+                                    class="form-control border fs-5"
                                     id="name"
                                     maxlength="25"
                                     minlength="5"
@@ -33,7 +33,7 @@
                                     type="text"
                             />
                         </div>
-                        <div class="text-warning fs-6"
+                        <div class="text-danger fs-6"
                              th:errors="*{name}"
                              th:if="${#fields.hasErrors('name')}">
                         </div>
@@ -41,12 +41,12 @@
                 </div>
                 <div class="row row-cols-1 row-cols-md-2 mb-2">
                     <div class="col">
-                        <label for="description" class="form-label" th:text="#{description}">Description:</label>
+                        <label for="description" class="form-label" th:text="#{description}"></label>
                     </div>
                     <div class="col">
                         <div class="input-group has-validation">
                             <input
-                                    class="form-control border border-black fs-5"
+                                    class="form-control border fs-5"
                                     id="description"
                                     maxlength="50"
                                     name="description"
@@ -56,7 +56,7 @@
                                     type="text"
                             />
                         </div>
-                        <div class="text-warning fs-6"
+                        <div class="text-danger fs-6"
                              th:errors="*{description}"
                              th:if="${#fields.hasErrors('description')}">
                         </div>
@@ -64,12 +64,12 @@
                 </div>
                 <div class="row row-cols-1 row-cols-md-2 mb-2">
                     <div class="col">
-                        <label for="code" class="form-label" th:text="#{testCode}">Code:</label>
+                        <label for="code" class="form-label" th:text="#{testCode}"></label>
                     </div>
                     <div class="col">
                         <div class="input-group has-validation gap-1">
                             <input
-                                    class="form-control border border-black fs-5"
+                                    class="form-control border fs-5"
                                     id="code"
                                     name="code"
                                     pattern="^(?=.*[A-Za-z].*[A-Za-z])(?=.*\d.*\d)(?=.*[!@#$%^&*].*[!@#$%^&*])[A-Za-z\d!@#$%^&*]{6}$"
@@ -78,14 +78,13 @@
                                     th:field="*{code}"
                                     type="text"
                             />
-                            <button class="btn bg-light text-black border border-black border-2 shadow rounded fs-5"
+                            <button class="btn btn-dark border border-2 border-black rounded fs-5"
                                     onclick="generateCode()"
                                     type="button"
                                     th:text="#{generate}">
-                                generate
                             </button>
                         </div>
-                        <div class="text-warning fs-6"
+                        <div class="text-danger fs-6"
                              th:errors="*{code}"
                              th:if="${#fields.hasErrors('code')}">
                         </div>
@@ -94,13 +93,12 @@
                 <div class="row row-cols-1 row-cols-md-2 mb-2">
                     <div class="col">
                         <label for="responseTime" class="form-label" th:text="#{timeForResponse}">
-                            Time for response:
                         </label>
                     </div>
                     <div class="col">
                         <div class="input-group has-validation">
                             <input
-                                    class="form-control border border-black fs-5"
+                                    class="form-control border fs-5"
                                     id="responseTime"
                                     name="responseTime"
                                     th:placeholder="#{inMinutes}"
@@ -110,7 +108,7 @@
                                     type="number"
                             />
                         </div>
-                        <div class="text-warning fs-6"
+                        <div class="text-danger fs-6"
                              th:errors="*{responseTime}"
                              th:if="${#fields.hasErrors('responseTime')}">
                         </div>
@@ -119,13 +117,12 @@
                 <div class="row row-cols-1 row-cols-md-2 mb-2">
                     <div class="col">
                         <label for="passingScore" class="form-label" th:text="#{passingScore}">
-                            Passing score:
                         </label>
                     </div>
                     <div class="col">
                         <div class="input-group has-validation">
                             <input
-                                    class="form-control border border-black fs-5"
+                                    class="form-control border fs-5"
                                     id="passingScore"
                                     name="passingScore"
                                     th:classappend="${#fields.hasErrors('passingScore')} ? 'is-invalid' : ''"
@@ -133,7 +130,7 @@
                                     type="number"
                             />
                         </div>
-                        <div class="text-warning fs-6"
+                        <div class="text-danger fs-6"
                              th:errors="*{passingScore}"
                              th:if="${#fields.hasErrors('passingScore')}">
                         </div>
@@ -142,13 +139,12 @@
                 <div class="row row-cols-1 row-cols-md-2 mb-2">
                     <div class="col">
                         <label for="questionsCount" class="form-label" th:text="#{questionsCount}">
-                            Questions count:
                         </label>
                     </div>
                     <div class="col">
                         <div class="input-group has-validation">
                             <input
-                                    class="form-control border border-black fs-5"
+                                    class="form-control border fs-5"
                                     id="questionsCount"
                                     name="questionsCount"
                                     required
@@ -157,7 +153,7 @@
                                     type="number"
                             />
                         </div>
-                        <div class="text-warning fs-6"
+                        <div class="text-danger fs-6"
                              th:errors="*{questionsCount}"
                              th:if="${#fields.hasErrors('questionsCount')}">
                         </div>
@@ -166,13 +162,12 @@
                 <div class="row row-cols-1 row-cols-md-2 mb-2">
                     <div class="col">
                         <label for="status" class="form-label" th:text="#{status}">
-                            Status:
                         </label>
                     </div>
                     <div class="col">
                         <div class="input-group has-validation">
                             <input
-                                    class="form-control border border-black fs-5"
+                                    class="form-control border fs-5"
                                     id="status"
                                     name="status"
                                     th:placeholder="#{openClosed}"
@@ -182,7 +177,7 @@
                                     type="text"
                             />
                         </div>
-                        <div class="text-warning fs-6"
+                        <div class="text-danger fs-6"
                              th:errors="*{status}"
                              th:if="${#fields.hasErrors('status')}">
                         </div>
@@ -191,9 +186,8 @@
                 <div class="row">
                     <div class="col text-center">
                         <button type="submit"
-                                class="btn bg-light text-black border border-black border-2 shadow rounded fs-5 px-5 mt-3"
+                                class="btn btn-dark border border-2 border-black rounded fs-5 px-5 mt-3"
                                 th:text="#{next}">
-                            next
                         </button>
                     </div>
                 </div>
@@ -203,6 +197,10 @@
 
     <div th:replace="~{fragments/footers :: footer}"></div>
 </div>
+<script
+        type="module"
+        src="https://cdn.jsdelivr.net/npm/@bufferhead/nightowl@0.0.14/dist/nightowl.js"
+></script>
 <script src="/js/code-generator.js"></script>
 <div th:replace="~{fragments/scripts :: scripts}"></div>
 </body>
