--- a/TestingEz/src/main/resources/templates/fragments/footers.html
+++ b/TestingEz/src/main/resources/templates/fragments/footers.html
@@ -3,27 +3,27 @@
 <div th:replace="~{fragments/heads :: head}"></div>
 <body class="font">
 
-<footer th:fragment="footer" class="shadow rounded border-top border-black bg-secondary">
-    <div class="container-fluid">
-        <footer class="container bg-secondary">
+<footer th:fragment="footer" class="border-top border-2 bg-light">
+    <div class="container-fluid bg-light">
+        <footer class="container bg-light">
             <ul class="nav justify-content-center pb-3 mb-3">
                 <li class="nav-item">
-                    <a href="#" class="nav-link px-2 text-white fs-5" th:text="#{footerHome}">Home</a>
+                    <a href="#" class="nav-link px-2 text-dark fs-5" th:text="#{footerHome}">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link px-2 text-white fs-5" th:text="#{features}">Features</a>
+                    <a href="#" class="nav-link px-2 text-dark fs-5" th:text="#{features}">Features</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link px-2 text-white fs-5" th:text="#{pricing}">Pricing</a>
+                    <a href="#" class="nav-link px-2 text-dark fs-5" th:text="#{pricing}">Pricing</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link px-2 text-white fs-5" th:text="#{faqs}">FAQs</a>
+                    <a href="#" class="nav-link px-2 text-dark fs-5" th:text="#{faqs}">FAQs</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link px-2 text-white fs-5" th:text="#{about}">About</a>
+                    <a href="#" class="nav-link px-2 text-dark fs-5" th:text="#{about}">About</a>
                 </li>
             </ul>
-            <p class="text-center text-white fs-5">© 2024 Company, Inc</p>
+            <p class="text-center text-dark fs-5">© 2024 Company, Inc</p>
         </footer>
     </div>
 </footer>
