--- a/TestingEz/src/main/resources/templates/test-preview.html
+++ b/TestingEz/src/main/resources/templates/test-preview.html
@@ -7,7 +7,7 @@
     <div th:replace="~{fragments/headers :: header}"></div>
 
     <main class="container d-flex justify-content-center flex-grow-1">
-        <div class="bg-secondary shadow rounded p-3 text-white border border-2 border-black fs-5">
+        <div class="bg-light shadow rounded p-3 border border-2 fs-5">
             <form
                     class="d-flex flex-column align-items-center justify-content-center"
                     th:object="${testPreviewData}"
@@ -15,22 +15,23 @@
                     th:method="post"
             >
                 <h2>"<span th:text="*{name}"></span>"</h2>
-                <h4><span th:text="#{madeBy}">Made by</span> <span th:text="*{creatorUsername}"></span></h4>
+                <h4><span th:text="#{madeBy}"></span> <span th:text="*{creatorUsername}"></span></h4>
                 <br>
                 <div class="align-self-start">
-                    <p><span th:text="#{description}">Description:</span> <span th:text="*{description}"></span></p>
-                    <p><span th:text="#{timeForResponse}">Time for response:</span> <span th:text="*{responseTime}">min</span></p>
-                    <p><span th:text="#{passingScore}">Passing score:</span> <span th:text="*{passingScore}"></span></p>
-                    <p><span th:text="#{questionsCount}">Questions count:</span> <span th:text="*{questionsCount}"></span></p>
-                    <p><span th:text="#{status}">Status:</span> <span th:text="*{status}"></span></p>
+                    <p><span th:text="#{description}"></span> <span th:text="*{description}"></span></p>
+                    <p><span th:text="#{timeForResponse}"></span> <span
+                            th:text="*{responseTime}">min</span></p>
+                    <p><span th:text="#{passingScore}"></span> <span th:text="*{passingScore}"></span></p>
+                    <p><span th:text="#{questionsCount}"></span> <span
+                            th:text="*{questionsCount}"></span></p>
+                    <p><span th:text="#{status}"></span> <span th:text="*{status}"></span></p>
                 </div>
                 <br>
                 <a
                         th:href="@{/questions/{id}/1(id=*{id})}"
                         type="submit"
-                        class="btn btn-light px-5 border border-black border-2 shadow rounded"
+                        class="btn btn-dark px-5 border border-2 rounded"
                         th:text="#{start}">
-                    Start
                 </a>
             </form>
         </div>
@@ -38,6 +39,10 @@
 
     <div th:replace="~{fragments/footers :: footer}"></div>
 </div>
+<script
+        type="module"
+        src="https://cdn.jsdelivr.net/npm/@bufferhead/nightowl@0.0.14/dist/nightowl.js"
+></script>
 <div th:replace="~{fragments/scripts :: scripts}"></div>
 </body>
 </html>
