--- a/TestingEz/src/main/resources/templates/user-home.html
+++ b/TestingEz/src/main/resources/templates/user-home.html
@@ -3,14 +3,14 @@
       xmlns:sec='http://www.thymeleaf.org/extras/spring-security'>
 <div th:replace="~{fragments/heads :: head}"></div>
 <body class="font">
-<div class="d-flex flex-column vh-100 gap-3">
+<div class="d-flex flex-column bg-light gap-3">
     <div th:replace="~{fragments/headers :: header}"></div>
 
-    <main class="container d-flex flex-column justify-content-center flex-grow-1 gap-3">
+    <main class="container d-flex flex-column bg-light justify-content-center flex-grow-1 gap-3">
         <div class="row align-items-center justify-content-center">
             <div class="col-sm-10 col-lg-8">
-                <h1 class="mb-3" th:text="#{testOfTheDay}">Test of the Day</h1>
-                <div class="rounded border border-2 p-2 fs-5 text-center">
+                <h1 class="mb-3" th:text="#{testOfTheDay}"></h1>
+                <div class="rounded shadow border border-2 p-2 fs-5 text-center">
                     <div th:each="questionObject, iStat: ${testOfTheDay}">
                         <p th:text="${iStat.index + 1} + '.' + ${questionObject.question}"></p>
                         <div class="d-flex justify-content-center gap-2">
@@ -18,69 +18,70 @@
                                     class="bg-light rounded border border-2 py-1 w-75 text-center"
                                     th:data-answer="${questionObject.answer}"
                                     th:id="'answer-' + ${iStat.index}">
-                            <button class="btn btn-light px-3 border border-2 rounded check-btn"
+                            <button class="btn btn-dark px-3 border border-2 border-black rounded check-btn"
                                     th:text="#{check}"
                                     th:data-index="${iStat.index}">
-                                check
                             </button>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-sm-10 col-lg-4">
-                <h1 class="mb-3">Bored?</h1>
-                <div class="text-center p-2 mb-3 border border-2 rounded">
-                    <h2>Click the Button Game</h2>
-                    <p>Click the button as many times as you can in 10 seconds!</p>
-                    <button id="game-button" class="btn btn-light px-3 border border-2 rounded">
-                        Click Me!
+                <h1 class="mb-3" th:text="#{bored}"></h1>
+                <div class="text-center p-2 mb-3 border border-2 rounded shadow">
+                    <h2 th:text="#{clickTheButtonGame}"></h2>
+                    <p th:text="#{clickTheButtonAsMany}"></p>
+                    <button class="btn btn-dark px-3 border border-2 border-black rounded" id="game-button"
+                            th:text="#{clickMe}"
+                            type="button">
                     </button>
-                    <p class="mt-3">Score: <span id="score" class="score">0</span></p>
+                    <p class="mt-3" th:text="#{score}"><span id="score" class="score">0</span></p>
                     <p id="message" class="mt-3"></p>
                 </div>
-                <div class="text-center p-2 border border-2 rounded ">
-                    <h2>Guess the Number Game</h2>
-                    <p>Guess a number between 1 and 100!</p>
+                <div class="text-center p-2 border border-2 rounded shadow">
+                    <h2 th:text="#{guessTheNumberGame}"></h2>
+                    <p th:text="#{guessANumberBetween}"></p>
                     <input type="number"
                            id="guess-input"
                            class="form-control bg-light rounded border border-2 text-center"
-                           placeholder="Enter your guess">
-                    <button id="guess-button"
-                            class="btn btn-light px-3 border border-2 rounded mt-3">
-                        Guess!
+                           th:placeholder="#{enterYourGuess}">
+                    <button class="btn btn-dark px-3 border border-2 border-black rounded mt-3"
+                            id="guess-button"
+                            th:text="#{guess}"
+                            type="button">
                     </button>
                     <p class="mt-3 feedback" id="feedback"></p>
                 </div>
             </div>
         </div>
         <div class="row mb-5 justify-content-center">
-            <h1 class="mb-3" th:text="#{miscellaneous}">Miscellaneous</h1>
+            <h1 class="mb-3" th:text="#{miscellaneous}"></h1>
             <div class="col-sm-10 col-md-4 mb-2">
                 <div id="factsCarousel" class="carousel slide" data-ride="carousel">
-                    <div class="carousel-item p-2 rounded border border-2"
+                    <div class="carousel-item p-2 rounded border border-2 shadow"
                          th:each="factObject, iStat : ${factsOfTheDay}"
                          th:classappend="${iStat.index == 0} ? 'active' : ''">
-                        <p class="card-title fw-bold fs-5" th:text="'Random Fact №' + ${iStat.index + 1}"></p>
+                        <p class="card-title fw-bold fs-5" th:text="#{randomFact} + ${iStat.index + 1}"></p>
                         <span class="card-text fs-6" th:text="${factObject.fact}"></span>
                     </div>
                 </div>
             </div>
             <div class="col-sm-10 col-md-4 mb-2">
                 <div id="jokesCarousel" class="carousel slide" data-ride="carousel">
-                    <div class="carousel-item p-2 rounded border border-2"
+                    <div class="carousel-item p-2 rounded border border-2 shadow"
                          th:each="jokeObject, iStat : ${jokesOfTheDay}"
                          th:classappend="${iStat.index == 0} ? 'active' : ''">
-                        <p class="card-title fw-bold fs-5" th:text="'Random Joke №' + ${iStat.index + 1}"></p>
+                        <p class="card-title fw-bold fs-5" th:text="#{randomJoke} + ${iStat.index + 1}"></p>
                         <span class="card-text fs-6" th:text="${jokeObject.joke}"></span>
                     </div>
                 </div>
             </div>
             <div class="col-sm-10 col-md-4 mb-2">
                 <div id="quotesCarousel" class="carousel slide" data-ride="carousel">
-                    <div class="carousel-item p-2 rounded border border-2"
+                    <div class="carousel-item p-2 rounded border border-2 shadow"
                          th:each="quoteObject, iStat : ${quotesOfTheDay}"
                          th:classappend="${iStat.index == 0} ? 'active' : ''">
-                        <p class="card-title fw-bold fs-5" th:text="'Random Quote №' + ${iStat.index + 1}"></p>
+                        <p class="card-title fw-bold fs-5" th:text="#{randomQuote} + ${iStat.index + 1}"></p>
                         <p class="card-text fs-6 fst-italic" th:text="${quoteObject.quote}"></p>
                         <span class="card-text fs-6 text-end fw-bold" th:text="'- ' + ${quoteObject.author}"></span>
                     </div>
@@ -89,9 +90,9 @@
         </div>
         <div class="row justify-content-center border-top border-2">
             <div class="col-sm-10 col-md-6 my-5">
-                <div class="border border-2 rounded p-3 d-flex flex-column justify-content-center align-items-center">
-                    <h4>Help us make "TestingEz" better!</h4>
-                    <span>How to improve?</span>
+                <div class="border border-2 rounded shadow p-3 d-flex flex-column justify-content-center align-items-center">
+                    <h4 th:text="#{helpUs}"></h4>
+                    <span th:text="#{howToImprove}"></span>
                     <form
                             th:action="@{/user/improvements/post}"
                             th:object="${improvementData}"
@@ -101,16 +102,16 @@
                                id="idea"
                                type="text"
                                th:field="*{idea}">
-                        <button class="btn btn-dark border border-2 px-5" id="is" type="submit">SEND</button>
+                        <button class="btn btn-dark border border-2 border-black px-5" id="is" type="submit"
+                                th:text="#{send}">
+                        </button>
                         <div class="text-danger fs-6"
                              th:errors="*{idea}"
                              th:if="${#fields.hasErrors('idea')}">
                         </div>
-                        <div th:if="${sent}" class="text-success fs-6">
-                            Thanks! Your improvement idea was sent!
+                        <div th:if="${sent}" class="text-success fs-6" th:text="#{thanks}">
                         </div>
                     </form>
-                    <span class="bg-success d-none" id="mes">Thanks!</span>
                 </div>
             </div>
         </div>
@@ -127,11 +128,16 @@
     </div>
     <div th:replace="~{fragments/footers :: footer}"></div>
 </div>
+<script
+        type="module"
+        src="https://cdn.jsdelivr.net/npm/@bufferhead/nightowl@0.0.14/dist/nightowl.js"
+></script>
 <script src="/js/clicker-game.js"></script>
 <script src="/js/guess-the-number-game.js"></script>
 <script src="/js/reveal-answer.js"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<div th:replace="~{fragments/scripts :: scripts}"></div>
 </body>
 </html>
